--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
       }
 
       .enterNumber {
-        margin-top: 60px;
-        margin-left: 40px;
+        margin-top: 100px;
+        margin-left: 80px;
         width: 20%;
         float: left;
       }
@@ -92,8 +92,8 @@
       #output {
         float: right;
         width: 40%;
-        text-align: center;
-        margin-top: 40px;
+        text-align: left;
+        transform: translate(0, -120px);
       }
     </style>
   </head>
