--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <a href="#">
               <input type="number" placeholder="1-20" />
             </a>
-            <a href="#"><button type="submit">Click!</button></a>
+            <button type="submit">Click!</button>
           </div>
         </div>
       </section>
