--- a/index.html
+++ b/index.html
@@ -115,10 +115,9 @@
       <section>
         <div class="container">
           <div class="enterNumber">
-            <a href="#">
-              <input type="number" placeholder="1-20" />
-            </a>
-            <button type="submit">Click!</button>
+            <input class="guess" type="number" placeholder="1-20" />
+
+            <button class="check" type="submit">Click!</button>
           </div>
         </div>
       </section>
@@ -135,5 +134,7 @@
         </div>
       </section>
     </div>
+
+    <script src="script.js"></script>
   </body>
 </html>
